src/grammar/CWScriptParser.ts
// Generated from ./grammar/CWScriptParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CWScriptParserListener } from "./CWScriptParserListener";
import { CWScriptParserVisitor } from "./CWScriptParserVisitor";


export class CWScriptParser extends Parser {
	public static readonly CONTRACT = 1;
	public static readonly INTERFACE = 2;
	public static readonly IMPORT = 3;
	public static readonly IMPLEMENTS = 4;
	public static readonly IMPL = 5;
	public static readonly EXTENSION = 6;
	public static readonly REQUIRES = 7;
	public static readonly EXTENDS = 8;
	public static readonly ERROR = 9;
	public static readonly EVENT = 10;
	public static readonly INSTANTIATE = 11;
	public static readonly EXEC = 12;
	public static readonly QUERY = 13;
	public static readonly MIGRATE = 14;
	public static readonly FOR = 15;
	public static readonly IN = 16;
	public static readonly FROM = 17;
	public static readonly STATE = 18;
	public static readonly TIMES = 19;
	public static readonly IF = 20;
	public static readonly ELSE = 21;
	public static readonly AND = 22;
	public static readonly OR = 23;
	public static readonly TRUE = 24;
	public static readonly FALSE = 25;
	public static readonly LET = 26;
	public static readonly FAIL = 27;
	public static readonly RETURN = 28;
	public static readonly STRUCT = 29;
	public static readonly ENUM = 30;
	public static readonly TYPE = 31;
	public static readonly EMIT = 32;
	public static readonly AS = 33;
	public static readonly LPAREN = 34;
	public static readonly RPAREN = 35;
	public static readonly LBRACK = 36;
	public static readonly RBRACK = 37;
	public static readonly LBRACE = 38;
	public static readonly RBRACE = 39;
	public static readonly DOT = 40;
	public static readonly COMMA = 41;
	public static readonly QUEST = 42;
	public static readonly EXCLAM = 43;
	public static readonly COLON = 44;
	public static readonly D_COLON = 45;
	public static readonly DOLLAR = 46;
	public static readonly HASH = 47;
	public static readonly AT = 48;
	public static readonly AMP = 49;
	public static readonly ARROW = 50;
	public static readonly FAT_ARROW = 51;
	public static readonly S_QUOTE = 52;
	public static readonly D_QUOTE = 53;
	public static readonly EQ = 54;
	public static readonly EQEQ = 55;
	public static readonly NEQ = 56;
	public static readonly PLUS = 57;
	public static readonly PLUS_EQ = 58;
	public static readonly MINUS = 59;
	public static readonly MINUS_EQ = 60;
	public static readonly MUL = 61;
	public static readonly MUL_EQ = 62;
	public static readonly DIV = 63;
	public static readonly DIV_EQ = 64;
	public static readonly MOD = 65;
	public static readonly MOD_EQ = 66;
	public static readonly LT = 67;
	public static readonly LT_EQ = 68;
	public static readonly GT = 69;
	public static readonly GT_EQ = 70;
	public static readonly POW = 71;
	public static readonly Ident = 72;
	public static readonly StringLiteral = 73;
	public static readonly IntegerLiteral = 74;
	public static readonly DecimalLiteral = 75;
	public static readonly CWSPEC_LINE_COMMENT = 76;
	public static readonly CWSPEC_BLOCK_COMMENT = 77;
	public static readonly LINE_COMMENT = 78;
	public static readonly BLOCK_COMMENT = 79;
	public static readonly WS = 80;
	public static readonly RULE_cwsItem = 0;
	public static readonly RULE_sourceFile = 1;
	public static readonly RULE_topLevelStmt = 2;
	public static readonly RULE_contractDefn = 3;
	public static readonly RULE_interfaceList = 4;
	public static readonly RULE_interfaceVal = 5;
	public static readonly RULE_interfaceDefn = 6;
	public static readonly RULE_importStmt = 7;
	public static readonly RULE_importList = 8;
	public static readonly RULE_importItem = 9;
	public static readonly RULE_contractBody = 10;
	public static readonly RULE_interfaceBody = 11;
	public static readonly RULE_contractItem = 12;
	public static readonly RULE_interfaceItem = 13;
	public static readonly RULE_errorDefn = 14;
	public static readonly RULE_errorDefnBlock = 15;
	public static readonly RULE_errorDefnBlock_item = 16;
	public static readonly RULE_eventDefn = 17;
	public static readonly RULE_eventDefnBlock = 18;
	public static readonly RULE_eventDefnBlock_item = 19;
	public static readonly RULE_stateDefn = 20;
	public static readonly RULE_stateDefnBlock = 21;
	public static readonly RULE_stateDefnBlock_item = 22;
	public static readonly RULE_itemDefn = 23;
	public static readonly RULE_mapDefn = 24;
	public static readonly RULE_mapDefnKeys = 25;
	public static readonly RULE_mapDefnKey = 26;
	public static readonly RULE_instantiateDefn = 27;
	public static readonly RULE_instantiateDecl = 28;
	public static readonly RULE_execDefn = 29;
	public static readonly RULE_execDefnBlock = 30;
	public static readonly RULE_execDefnBlock_item = 31;
	public static readonly RULE_execDecl = 32;
	public static readonly RULE_execDeclBlock = 33;
	public static readonly RULE_execDeclBlock_item = 34;
	public static readonly RULE_queryDefn = 35;
	public static readonly RULE_queryDefnBlock = 36;
	public static readonly RULE_queryDefnBlock_item = 37;
	public static readonly RULE_queryDecl = 38;
	public static readonly RULE_queryDeclBlock = 39;
	public static readonly RULE_queryDeclBlock_item = 40;
	public static readonly RULE_migrateDefn = 41;
	public static readonly RULE_migrateDecl = 42;
	public static readonly RULE_enumVariant = 43;
	public static readonly RULE_enumVariant_struct = 44;
	public static readonly RULE_enumVariant_tuple = 45;
	public static readonly RULE_enumVariant_unit = 46;
	public static readonly RULE_tupleMembers = 47;
	public static readonly RULE_parenStructMembers = 48;
	public static readonly RULE_curlyStructMembers = 49;
	public static readonly RULE_structMember = 50;
	public static readonly RULE_typeExpr = 51;
	public static readonly RULE_typeParam = 52;
	public static readonly RULE_pathList = 53;
	public static readonly RULE_typePath = 54;
	public static readonly RULE_typeDefn = 55;
	public static readonly RULE_structDefn = 56;
	public static readonly RULE_enumDefn = 57;
	public static readonly RULE_enumVariantList = 58;
	public static readonly RULE_typeAliasDefn = 59;
	public static readonly RULE_namedFnDecl = 60;
	public static readonly RULE_namedFnDefn = 61;
	public static readonly RULE_fnType = 62;
	public static readonly RULE_fnArgs = 63;
	public static readonly RULE_fnArgList = 64;
	public static readonly RULE_fnArg = 65;
	public static readonly RULE_fnBody = 66;
	public static readonly RULE_stmt = 67;
	public static readonly RULE_letStmt_ = 68;
	public static readonly RULE_letLHS = 69;
	public static readonly RULE_expr = 70;
	public static readonly RULE_val = 71;
	public static readonly RULE_structVal_ = 72;
	public static readonly RULE_structValMembers = 73;
	public static readonly RULE_structValMember = 74;
	public static readonly RULE_ifExpr_ = 75;
	public static readonly RULE_ifClause_ = 76;
	public static readonly RULE_elseIfClauses = 77;
	public static readonly RULE_elseClause = 78;
	public static readonly RULE_forStmt_ = 79;
	public static readonly RULE_identList = 80;
	public static readonly RULE_exprList = 81;
	public static readonly RULE_namedExprList = 82;
	public static readonly RULE_namedExpr = 83;
	public static readonly RULE_ident = 84;
	public static readonly RULE_cwspec = 85;
	public static readonly RULE_reservedKeyword = 86;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"cwsItem", "sourceFile", "topLevelStmt", "contractDefn", "interfaceList", 
		"interfaceVal", "interfaceDefn", "importStmt", "importList", "importItem", 
		"contractBody", "interfaceBody", "contractItem", "interfaceItem", "errorDefn", 
		"errorDefnBlock", "errorDefnBlock_item", "eventDefn", "eventDefnBlock", 
		"eventDefnBlock_item", "stateDefn", "stateDefnBlock", "stateDefnBlock_item", 
		"itemDefn", "mapDefn", "mapDefnKeys", "mapDefnKey", "instantiateDefn", 
		"instantiateDecl", "execDefn", "execDefnBlock", "execDefnBlock_item", 
		"execDecl", "execDeclBlock", "execDeclBlock_item", "queryDefn", "queryDefnBlock", 
		"queryDefnBlock_item", "queryDecl", "queryDeclBlock", "queryDeclBlock_item", 
		"migrateDefn", "migrateDecl", "enumVariant", "enumVariant_struct", "enumVariant_tuple", 
		"enumVariant_unit", "tupleMembers", "parenStructMembers", "curlyStructMembers", 
		"structMember", "typeExpr", "typeParam", "pathList", "typePath", "typeDefn", 
		"structDefn", "enumDefn", "enumVariantList", "typeAliasDefn", "namedFnDecl", 
		"namedFnDefn", "fnType", "fnArgs", "fnArgList", "fnArg", "fnBody", "stmt", 
		"letStmt_", "letLHS", "expr", "val", "structVal_", "structValMembers", 
		"structValMember", "ifExpr_", "ifClause_", "elseIfClauses", "elseClause", 
		"forStmt_", "identList", "exprList", "namedExprList", "namedExpr", "ident", 
		"cwspec", "reservedKeyword",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'contract'", "'interface'", "'import'", "'implements'", "'impl'", 
		"'extension'", "'requires'", "'extends'", "'error'", "'event'", "'instantiate'", 
		"'exec'", "'query'", "'migrate'", "'for'", "'in'", "'from'", "'state'", 
		"'times'", "'if'", "'else'", "'and'", "'or'", "'true'", "'false'", "'let'", 
		"'fail'", "'return'", "'struct'", "'enum'", "'type'", "'emit'", "'as'", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "'?'", "'!'", 
		"':'", "'::'", "'$'", "'#'", "'@'", "'&'", "'->'", "'=>'", "'''", "'\"'", 
		"'='", "'=='", "'!='", "'+'", "'+='", "'-'", "'-='", "'*'", "'*='", "'/'", 
		"'/='", "'%'", "'%='", "'<'", "'<='", "'>'", "'>='", "'**'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "CONTRACT", "INTERFACE", "IMPORT", "IMPLEMENTS", "IMPL", "EXTENSION", 
		"REQUIRES", "EXTENDS", "ERROR", "EVENT", "INSTANTIATE", "EXEC", "QUERY", 
		"MIGRATE", "FOR", "IN", "FROM", "STATE", "TIMES", "IF", "ELSE", "AND", 
		"OR", "TRUE", "FALSE", "LET", "FAIL", "RETURN", "STRUCT", "ENUM", "TYPE", 
		"EMIT", "AS", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
		"DOT", "COMMA", "QUEST", "EXCLAM", "COLON", "D_COLON", "DOLLAR", "HASH", 
		"AT", "AMP", "ARROW", "FAT_ARROW", "S_QUOTE", "D_QUOTE", "EQ", "EQEQ", 
		"NEQ", "PLUS", "PLUS_EQ", "MINUS", "MINUS_EQ", "MUL", "MUL_EQ", "DIV", 
		"DIV_EQ", "MOD", "MOD_EQ", "LT", "LT_EQ", "GT", "GT_EQ", "POW", "Ident", 
		"StringLiteral", "IntegerLiteral", "DecimalLiteral", "CWSPEC_LINE_COMMENT", 
		"CWSPEC_BLOCK_COMMENT", "LINE_COMMENT", "BLOCK_COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CWScriptParser._LITERAL_NAMES, CWScriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CWScriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CWScriptParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return CWScriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CWScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CWScriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public cwsItem(): CwsItemContext {
		let _localctx: CwsItemContext = new CwsItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CWScriptParser.RULE_cwsItem);
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 174;
				this.sourceFile();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 175;
				this.topLevelStmt();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 176;
				this.contractDefn();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 177;
				this.importStmt();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 178;
				this.contractItem();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 179;
				this.interfaceItem();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 180;
				this.typeExpr(0);
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 181;
				this.expr(0);
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 182;
				this.stmt();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 183;
				this.val();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sourceFile(): SourceFileContext {
		let _localctx: SourceFileContext = new SourceFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CWScriptParser.RULE_sourceFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				this.state = 186;
				_localctx._spec = this.cwspec();
				}
				break;
			}
			this.state = 192;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CWScriptParser.CONTRACT) | (1 << CWScriptParser.INTERFACE) | (1 << CWScriptParser.IMPORT))) !== 0) || _la === CWScriptParser.CWSPEC_LINE_COMMENT || _la === CWScriptParser.CWSPEC_BLOCK_COMMENT) {
				{
				{
				this.state = 189;
				this.topLevelStmt();
				}
				}
				this.state = 194;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 195;
			this.match(CWScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public topLevelStmt(): TopLevelStmtContext {
		let _localctx: TopLevelStmtContext = new TopLevelStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CWScriptParser.RULE_topLevelStmt);
		try {
			this.state = 200;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 197;
				this.contractDefn();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 198;
				this.interfaceDefn();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 199;
				this.importStmt();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public contractDefn(): ContractDefnContext {
		let _localctx: ContractDefnContext = new ContractDefnContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CWScriptParser.RULE_contractDefn);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.CWSPEC_LINE_COMMENT || _la === CWScriptParser.CWSPEC_BLOCK_COMMENT) {
				{
				this.state = 202;
				_localctx._spec = this.cwspec();
				}
			}

			this.state = 205;
			this.match(CWScriptParser.CONTRACT);
			{
			this.state = 206;
			_localctx._name = this.ident();
			}
			this.state = 209;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.EXTENDS) {
				{
				this.state = 207;
				this.match(CWScriptParser.EXTENDS);
				this.state = 208;
				_localctx._baseContracts = this.identList();
				}
			}

			this.state = 213;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.IMPLEMENTS) {
				{
				this.state = 211;
				this.match(CWScriptParser.IMPLEMENTS);
				{
				this.state = 212;
				_localctx._interfaces = this.interfaceList();
				}
				}
			}

			this.state = 215;
			this.contractBody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interfaceList(): InterfaceListContext {
		let _localctx: InterfaceListContext = new InterfaceListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CWScriptParser.RULE_interfaceList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 217;
			this.interfaceVal();
			this.state = 222;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CWScriptParser.COMMA) {
				{
				{
				this.state = 218;
				this.match(CWScriptParser.COMMA);
				this.state = 219;
				this.interfaceVal();
				}
				}
				this.state = 224;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interfaceVal(): InterfaceValContext {
		let _localctx: InterfaceValContext = new InterfaceValContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CWScriptParser.RULE_interfaceVal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 225;
			_localctx._interfaceName = this.ident();
			}
			this.state = 230;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.LBRACK) {
				{
				this.state = 226;
				this.match(CWScriptParser.LBRACK);
				this.state = 227;
				_localctx._mixins = this.identList();
				this.state = 228;
				this.match(CWScriptParser.RBRACK);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interfaceDefn(): InterfaceDefnContext {
		let _localctx: InterfaceDefnContext = new InterfaceDefnContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CWScriptParser.RULE_interfaceDefn);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 233;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.CWSPEC_LINE_COMMENT || _la === CWScriptParser.CWSPEC_BLOCK_COMMENT) {
				{
				this.state = 232;
				_localctx._spec = this.cwspec();
				}
			}
